--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,7 @@ gpt-2-simple = "^0.8.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyright]
+venvPath="./"
+venv=".venv"
